# Avatar

./: .gitmodules  AvatarStudio.sln  CMakeLists.txt  GenerateProjects.bat  README.md  premake5.lua
Avatar/: Avatar.vcxproj  Avatar.vcxproj.filters
Avatar/src/: Avatar.h
Avatar/src/Avatar/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Sandbox/src/: SandboxApp.cpp
Venus/: CMakeLists.txt
Venus/cmake/: config.cmake
Venus/src/: Venus.h
Venus/src/Venus/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
